<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.qmuiteam.qmui.widget.QMUITopBarLayout
            android:id="@+id/ui_topbar"
            style="@style/commonTopbarStyle" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f2f2f2"
            android:fillViewport="true"
            android:focusableInTouchMode="false"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/content_title_style1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_15"
                    android:text="@string/basic_infor" />

                <!--检查人-->
                <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                    android:id="@+id/civ_checker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:fm_content_item_show_line="false"
                    app:fm_content_item_show_red="true"
                    app:fm_content_item_show_tip="false"
                    app:fm_content_item_show_tip_icon="false"
                    app:fm_content_item_title="@string/checker" />
                <!--检查单位-->
                <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                    android:id="@+id/civ_checkplace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:fm_content_item_et_hint="@string/check_place_hint"
                    app:fm_content_item_show_line="false"
                    app:fm_content_item_show_red="true"
                    app:fm_content_item_show_tip="false"
                    app:fm_content_item_show_tip_icon="false"
                    app:fm_content_item_title="@string/check_place" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        style="@style/h3_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#f2f2f2"
                        android:paddingLeft="@dimen/dp_15"
                        android:paddingTop="@dimen/dp_16"
                        android:paddingBottom="@dimen/dp_16"
                        android:text="@string/check_wiring_segment_way" />
                    <!--开始站点-->
                    <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                        android:id="@+id/civ_start_site"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        app:fm_content_item_et_hint="@string/start_site_hint"
                        app:fm_content_item_show_line="false"
                        app:fm_content_item_show_red="true"
                        app:fm_content_item_show_tip="true"
                        app:fm_content_item_show_tip_icon="true"
                        app:fm_content_item_title="@string/start_site" />
                    <!--结束站点-->
                    <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                        android:id="@+id/civ_end_site"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        app:fm_content_item_et_hint="@string/end_site_hint"
                        app:fm_content_item_show_line="false"
                        app:fm_content_item_show_red="true"
                        app:fm_content_item_show_tip="true"
                        app:fm_content_item_show_tip_icon="true"
                        app:fm_content_item_title="@string/end_site" />

                    <!--上/下行区间-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white">


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                style="@style/h3_text_style"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="@dimen/dp_16"
                                android:paddingTop="@dimen/dp_16"

                                android:paddingBottom="@dimen/dp_16"
                                android:text="@string/up_down_interval" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/dp_6"
                                android:text="*"
                                android:textColor="@color/red" />
                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/rg_up_down_result"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="right|center_vertical"
                            android:layout_marginRight="@dimen/dp_6"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/dp_10"
                            android:paddingTop="@dimen/dp_4"
                            android:paddingRight="@dimen/dp_10"
                            android:paddingBottom="@dimen/dp_4">

                            <RadioButton
                                android:id="@+id/rb_up"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/up_interval" />

                            <RadioButton
                                android:id="@+id/rb_down"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/down_interval" />
                        </RadioGroup>

                    </LinearLayout>


                    <View
                        style="@style/dash_line_style"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:layout_marginRight="@dimen/dp_16" />

                    <!--检查方式-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white">


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                style="@style/h3_text_style"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="@dimen/dp_16"
                                android:paddingTop="@dimen/dp_16"
                                android:paddingBottom="@dimen/dp_16"
                                android:text="@string/check_the_content" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/dp_6"
                                android:text="*"
                                android:textColor="@color/red" />
                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/rg_group_check"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="right|center_vertical"
                            android:layout_marginRight="@dimen/dp_6"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/dp_10"
                            android:paddingTop="@dimen/dp_4"
                            android:paddingRight="@dimen/dp_10"
                            android:paddingBottom="@dimen/dp_4">

                            <RadioButton
                                android:id="@+id/rb_check_walk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/check_walk" />

                            <RadioButton
                                android:id="@+id/rb_check_multiply"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/check_multiply" />
                        </RadioGroup>
                    </LinearLayout>

                    <View
                        style="@style/dash_line_style"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:layout_marginRight="@dimen/dp_16" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_train"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <!--添乘列车号-->
                    <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                        android:id="@+id/civ_train_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        app:fm_content_item_et_hint="@string/train_number_hint"
                        app:fm_content_item_show_line="false"
                        app:fm_content_item_show_red="true"
                        app:fm_content_item_show_tip="false"
                        app:fm_content_item_show_tip_icon="false"
                        app:fm_content_item_title="@string/train_number" />

                    <!--值乘司机-->
                    <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                        android:id="@+id/civ_train_driver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        app:fm_content_item_et_hint="@string/train_driver_hint"
                        app:fm_content_item_show_line="false"
                        app:fm_content_item_show_red="false"
                        app:fm_content_item_show_tip="false"
                        app:fm_content_item_show_tip_icon="false"
                        app:fm_content_item_title="@string/train_driver" />

                    <!--添乘上车时间-->
                    <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                        android:id="@+id/civ_train_geton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        app:fm_content_item_et_hint="@string/add_train_geton_hint"
                        app:fm_content_item_show_line="false"
                        app:fm_content_item_show_red="true"
                        app:fm_content_item_show_tip="true"
                        app:fm_content_item_show_tip_icon="true"
                        app:fm_content_item_title="@string/add_train_geton" />

                    <!--添乘下车时间-->
                    <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                        android:id="@+id/civ_train_getoff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        app:fm_content_item_et_hint="@string/add_train_getoff_hint"
                        app:fm_content_item_show_line="false"
                        app:fm_content_item_show_red="true"
                        app:fm_content_item_show_tip="true"
                        app:fm_content_item_show_tip_icon="true"
                        app:fm_content_item_title="@string/add_train_getoff" />

                </LinearLayout>

                <!--检查内容-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/h3_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:paddingTop="@dimen/dp_16"
                        android:paddingBottom="@dimen/dp_16"
                        android:text="@string/check_the_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/dp_6"
                        android:text="*"
                        android:textColor="@color/red" />
                </LinearLayout>


                <com.facilityone.wireless.a.arch.widget.EditNumberView
                    android:id="@+id/env_checkcontent_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fm_edit_number_desc="@string/check_the_content_hint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!--检查情况-->
                    <TextView
                        style="@style/h3_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:paddingTop="@dimen/dp_16"
                        android:paddingBottom="@dimen/dp_16"
                        android:text="@string/check_the_condition" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/dp_6"
                        android:text="*"
                        android:textColor="@color/red" />
                </LinearLayout>

                <com.facilityone.wireless.a.arch.widget.EditNumberView
                    android:id="@+id/env_checkcondition_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fm_edit_number_desc="@string/check_the_condition_hint" />


                <!--解决情况-->
                <TextView
                    style="@style/h3_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_16"
                    android:text="@string/solve_the_condition" />

                <com.facilityone.wireless.a.arch.widget.EditNumberView
                    android:id="@+id/env_solvecondition_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fm_edit_number_desc="@string/solve_the_condition_hint" />

                <!--需跟踪情况-->
                <TextView
                    style="@style/h3_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_16"
                    android:text="@string/to_be_traked" />

                <com.facilityone.wireless.a.arch.widget.EditNumberView
                    android:id="@+id/env_to_be_traked_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:fm_edit_number_desc="@string/to_be_traked_hint" />


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


    </LinearLayout>
</layout>